Rename frame namespace to render. Add icmd_list.

--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="include\GPU\Buffers\qgl_imappable.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_index_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_vertex_buffer.h" />
+    <ClInclude Include="include\GPU\Command-Lists\qgl_icmd_list.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_cbv_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_descriptor_range.h" />
@@ -195,15 +196,15 @@
     <ClInclude Include="include\GPU\Descriptors\qgl_sampler_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_srv_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_uav_descriptor_heap.h" />
-    <ClInclude Include="include\GPU\Frame\qgl_depth_stencil.h" />
-    <ClInclude Include="include\GPU\Frame\qgl_frame.h" />
-    <ClInclude Include="include\GPU\Frame\qgl_render_target.h" />
-    <ClInclude Include="include\GPU\Frame\qgl_scissor.h" />
-    <ClInclude Include="include\GPU\Frame\qgl_viewport.h" />
     <ClInclude Include="include\GPU\Memory\qgl_igpu_memory_allocator.h" />
     <ClInclude Include="include\GPU\qgl_graphics_device.h" />
     <ClInclude Include="include\GPU\qgl_graphics_device_helpers.h" />
     <ClInclude Include="include\GPU\qgl_pso.h" />
+    <ClInclude Include="include\GPU\Render\qgl_depth_stencil.h" />
+    <ClInclude Include="include\GPU\Render\qgl_frame.h" />
+    <ClInclude Include="include\GPU\Render\qgl_render_target.h" />
+    <ClInclude Include="include\GPU\Render\qgl_scissor.h" />
+    <ClInclude Include="include\GPU\Render\qgl_viewport.h" />
     <ClInclude Include="include\GPU\Root-Signature\qgl_ibindable.h" />
     <ClInclude Include="include\GPU\Root-Signature\qgl_root_signature.h" />
     <ClInclude Include="include\GPU\Synchronization\qgl_fence.h" />
