--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -170,7 +170,6 @@
     <ClInclude Include="include\Content\Content-Buffers\qgl_rasterizer_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_sampler_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_text_format_buffer.h" />
-    <ClInclude Include="include\Content\qgl_blender.h" />
     <ClInclude Include="include\Content\qgl_brush.h" />
     <ClInclude Include="include\Content\qgl_camera.h" />
     <ClInclude Include="include\Content\qgl_shader.h" />
@@ -186,6 +185,9 @@
     <ClInclude Include="include\GPU\Buffers\qgl_imappable.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_index_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_vertex_buffer.h" />
+    <ClInclude Include="include\GPU\Command-Lists\qgl_cmd_bundle.h" />
+    <ClInclude Include="include\GPU\Command-Lists\qgl_cpy_cmd_list.h" />
+    <ClInclude Include="include\GPU\Command-Lists\qgl_graphics_cmd_list.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_icmd_list.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_cbv_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_descriptor_heap.h" />
@@ -200,6 +202,7 @@
     <ClInclude Include="include\GPU\qgl_graphics_device.h" />
     <ClInclude Include="include\GPU\qgl_graphics_device_helpers.h" />
     <ClInclude Include="include\GPU\qgl_pso.h" />
+    <ClInclude Include="include\GPU\Render\qgl_blender.h" />
     <ClInclude Include="include\GPU\Render\qgl_depth_stencil.h" />
     <ClInclude Include="include\GPU\Render\qgl_frame.h" />
     <ClInclude Include="include\GPU\Render\qgl_render_target.h" />
@@ -236,9 +239,11 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
+    <ClCompile Include="qgl_graphics_cmd_list.cpp" />
     <ClCompile Include="qgl_graphics_device.cpp" />
     <ClCompile Include="qgl_graphics_device_helpers.cpp" />
     <ClCompile Include="qgl_graphic_config_buffer.cpp" />
+    <ClCompile Include="qgl_icmd_list.cpp" />
     <ClCompile Include="qgl_light.cpp" />
     <ClCompile Include="qgl_light_buffer.cpp" />
     <ClCompile Include="qgl_pso.cpp" />
