--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -160,6 +160,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Components\qgl_model_render_component.h" />
+    <ClInclude Include="include\Components\qgl_text_render_component.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_blender_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_blender_desc_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_brush_buffer.h" />
@@ -172,6 +174,7 @@
     <ClInclude Include="include\Content\Content-Buffers\qgl_text_format_buffer.h" />
     <ClInclude Include="include\Content\qgl_brush.h" />
     <ClInclude Include="include\Content\qgl_camera.h" />
+    <ClInclude Include="include\Content\qgl_model.h" />
     <ClInclude Include="include\Content\qgl_shader.h" />
     <ClInclude Include="include\Content\qgl_light.h" />
     <ClInclude Include="include\Content\qgl_rasterizer.h" />
@@ -179,7 +182,6 @@
     <ClInclude Include="include\Content\qgl_texture.h" />
     <ClInclude Include="include\Content\qgl_text_format.h" />
     <ClInclude Include="include\Content\qgl_wtext.h" />
-    <ClInclude Include="include\Engines\qgl_icmd_list.h" />
     <ClInclude Include="include\GPU\Buffers\igpu_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_const_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_imappable.h" />
@@ -216,6 +218,8 @@
     <ClInclude Include="include\Metrics\qgl_shader_meta.h" />
     <ClInclude Include="include\qgl_graphics_include.h" />
     <ClInclude Include="include\qgl_window.h" />
+    <ClInclude Include="include\Scene\qgl_scene.h" />
+    <ClInclude Include="include\Scene\qgl_stage.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="QGLGraphics.h" />
     <ClInclude Include="QGL_GraphicsRT.h" />
@@ -263,6 +267,7 @@
     <ClCompile Include="qgl_texture.cpp" />
     <ClCompile Include="qgl_text_format.cpp" />
     <ClCompile Include="qgl_text_format_buffer.cpp" />
+    <ClCompile Include="qgl_text_render_component.cpp" />
     <ClCompile Include="qgl_uav_descriptor_heap.cpp" />
     <ClCompile Include="qgl_viewport.cpp" />
     <ClCompile Include="qgl_window.cpp" />
