--- a/QGL_Content/QGL_Content.vcxproj
+++ b/QGL_Content/QGL_Content.vcxproj
@@ -170,7 +170,6 @@
     <ClInclude Include="include\Content-Items\qgl_content_item.h" />
     <ClInclude Include="include\Content-Items\qgl_string_item.h" />
     <ClInclude Include="include\Content-Items\qgl_wstring_item.h" />
-    <ClInclude Include="include\Content-Project\qgl_content_project.h" />
     <ClInclude Include="include\Content-Project\qgl_content_project_compiler.h" />
     <ClInclude Include="include\Content-Store\qgl_content_store.h" />
     <ClInclude Include="include\Content-Store\qgl_content_accessor.h" />
@@ -180,6 +179,7 @@
     <ClInclude Include="include\File-Loaders\qgl_file_loader_string.h" />
     <ClInclude Include="include\File-Loaders\qgl_file_loader_wstring.h" />
     <ClInclude Include="include\Interfaces\qgl_icontent_file.h" />
+    <ClInclude Include="include\Interfaces\qgl_icontent_project.h" />
     <ClInclude Include="include\qgl_content_include.h" />
     <ClInclude Include="include\qgl_content_types.h" />
     <ClInclude Include="include\qgl_file_handle.h" />
@@ -195,10 +195,10 @@
     <ClCompile Include="qgl_content_variant_entry.cpp" />
     <ClCompile Include="qgl_content_file_helpers.cpp" />
     <ClCompile Include="qgl_content_project_compiler.cpp" />
-    <ClCompile Include="qgl_content_project.cpp" />
     <ClCompile Include="qgl_content_store.cpp" />
     <ClCompile Include="qgl_content_store_config.cpp" />
     <ClCompile Include="qgl_icontent_file.cpp" />
+    <ClCompile Include="qgl_icontent_project.cpp" />
     <ClCompile Include="qgl_string_item.cpp" />
     <ClCompile Include="qgl_wstring_item.cpp" />
     <ClInclude Include="pch.h" />
