--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="include\Content\Content-Buffers\qgl_text_format_buffer.h" />
     <ClInclude Include="include\Content\qgl_brush.h" />
     <ClInclude Include="include\Content\qgl_camera.h" />
+    <ClInclude Include="include\Content\qgl_graphics_config.h" />
     <ClInclude Include="include\Content\qgl_model.h" />
     <ClInclude Include="include\Content\qgl_shader.h" />
     <ClInclude Include="include\Content\qgl_light.h" />
@@ -215,6 +216,7 @@
     <ClInclude Include="include\GPU\Synchronization\qgl_fence.h" />
     <ClInclude Include="include\GPU\Synchronization\qgl_sync_object.h" />
     <ClInclude Include="include\Helpers\d3dx12.h" />
+    <ClInclude Include="include\Interfaces\qgl_igraphics_device.h" />
     <ClInclude Include="include\Metrics\qgl_shader_meta.h" />
     <ClInclude Include="include\qgl_graphics_include.h" />
     <ClInclude Include="include\qgl_window.h" />
@@ -245,6 +247,7 @@
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
     <ClCompile Include="qgl_graphics_cmd_list.cpp" />
+    <ClCompile Include="qgl_graphics_config.cpp" />
     <ClCompile Include="qgl_graphics_device.cpp" />
     <ClCompile Include="qgl_graphics_device_helpers.cpp" />
     <ClCompile Include="qgl_graphic_config_buffer.cpp" />
